@@ -227,13 +227,13 @@ $itemFormList->addRow(_('Flexible intervals'),
 // append new flexible interval to form list
 $newFlexInt = new CSpan(array(
 	_('Interval (in sec)'),
-	' ',
+	SPACE,
 	new CNumericBox('new_delay_flex[delay]', $this->data['new_delay_flex']['delay'], 5, false, false, false),
-	' ',
+	SPACE,
 	_('Period'),
-	' ',
+	SPACE,
 	new CTextBox('new_delay_flex[period]', $this->data['new_delay_flex']['period'], 20),
-	' ',
+	SPACE,
 	new CSubmit('add_delay_flex', _('Add'), null, 'formlist')
 ));
 $newFlexInt->setAttribute('id', 'row-new-delay-flex-fields');
