@@ -353,17 +353,21 @@ $itemFormList->addRow(
 );
 
 // append new delay to form list
-$newFlexInt = new CDiv(array(
-	_('Interval (in sec)'),
-	' ',
-	new CNumericBox('new_delay_flex[delay]', 50, 5),
-	' ',
-	_('Period'),
-	' ',
-	new CTextBox('new_delay_flex[period]', ZBX_DEFAULT_INTERVAL, 20),
-	' ',
-	new CSubmit('add_delay_flex', _('Add'), null, 'formlist')
-), null, 'row-new-delay-flex-fields');
+$newFlexInt = new CDiv(
+	array(
+		_('Interval (in sec)'),
+		SPACE,
+		new CNumericBox('new_delay_flex[delay]', 50, 5),
+		SPACE,
+		_('Period'),
+		SPACE,
+		new CTextBox('new_delay_flex[period]', ZBX_DEFAULT_INTERVAL, 20),
+		SPACE,
+		new CSubmit('add_delay_flex', _('Add'), null, 'formlist')
+	),
+	null,
+	'row-new-delay-flex-fields'
+);
 $newFlexInt->setAttribute('data-submit-button-selector', '#add_delay_flex');
 
 $maxFlexMsg = new CSpan(_('Maximum number of flexible intervals added'), 'red');
